# OS

Lab1/Linux/Main/: CMakeLists.txt  main.cpp
Lab1/Linux/Number/: CMakeLists.txt  number.cpp
Lab1/Linux/Vector/: CMakeLists.txt  Vector.cpp  Vector.h  VectorConstants.h  Vector_Export.h
Lab1/Linux/mainInclude/: CMakeLists.txt  main.cpp
Lab1/Windows/NumberLib/: NumberLib.sln
Lab1/Windows/Test/: Test.sln
Lab1/Windows/VectorLib/: VectorLib.sln
Lab2/Linux/: CMakeLists.txt  main.cpp
Lab2/Matrix/: main.cpp
Lab2/Windows/: MatrixWindows.sln
Lab2/Windows/MatrixWindows/: MatrixWindows.vcxproj  Source.cpp
Lab3/: BufferChannel.h  CMakeLists.txt  MatrixMultiplication.cpp  MatrixMultiplication.h  main.cpp
Lab4/MacOS/: CMakeLists.txt
Lab4/MacOS/killer/: killer.cpp
Lab4/MacOS/user/: user.cpp
Lab4/Windows/: Lab4Process.sln
Lab4/Windows/Lab4Process/: Lab4Process.vcxproj  Lab4Process.vcxproj.filters  killer.cpp
Lab4/Windows/User/: User.vcxproj  User.vcxproj.filters  user.cpp
Lab5/Linux/: CMakeLists.txt
Lab5/Linux/Main/: main.cpp
Lab5/Linux/ProjectA/: ProjectA.cpp
Lab5/Linux/ProjectM/: ProjectM.cpp
Lab5/Linux/ProjectP/: ProjectP.cpp
Lab5/Linux/ProjectS/: ProjectS.cpp
Lab5/Windows/: Pipes.sln
Lab5/Windows/Main/: Input.txt  Main.cpp  Main.vcxproj  Main.vcxproj.filters
Lab5/Windows/ProjectA/: ProjectA.vcxproj  Source.cpp
Lab5/Windows/ProjectM/: ProjectM.vcxproj  Source.cpp
Lab5/Windows/ProjectP/: ProjectP.cpp  ProjectP.vcxproj  ProjectP.vcxproj.filters
Lab5/Windows/ProjectS/: ProjectS.cpp  ProjectS.vcxproj  ProjectS.vcxproj.filters
(+206 files in other folders)
